[project]
name = "alaska-extract"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["I", "B", "UP"]
exclude = [".pixi", "outputs", "_diag_frames", "*_frames"]

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[project.scripts]
alaska-extract = "alaska_extract.cli:main"
